# open_cl_rust

./: .gitignore  Cargo.toml  README.md  build.rs  get_open_cl_headers.sh  license.md
.github/workflows/: open_cl_rust.yml
examples/simple_add/: main.rs
open-cl-core/: Cargo.toml
open-cl-core/examples/simple_add/: main.rs
open-cl-core/src/: buffer.rs  command_queue.rs  context.rs  device.rs  kernel.rs  lib.rs  platform.rs  program.rs  session.rs  testing.rs
open-cl-core/src/tests/: mod.rs
open-cl-low-level/: Cargo.toml
open-cl-low-level/examples/applying_number_type/: main.rs
open-cl-low-level/examples/casting_example/: main.rs
open-cl-low-level/examples/ll_simple_add/: main.rs
open-cl-low-level/src/: cl_bitflags.rs  cl_enums.rs  cl_input.rs  cl_number.rs  cl_number_type.rs  cl_object.rs  cl_pointer.rs  cl_retain_release.rs  command_queue.rs  context.rs  context_builder.rs  device.rs  error.rs  event.rs  ffi.rs  kernel.rs  lib.rs  ll_testing.rs  macros.rs  mem.rs  object_wrapper.rs  output.rs  platform.rs  program.rs  session.rs  status_code.rs  traits.rs  utils.rs  vec_or_slice.rs  waitlist.rs  work.rs
open-cl-low-level/src/cl/: cl_bitflags.rs  cl_enums.rs  cl_object.rs  ffi.rs  functions.rs  mod.rs  object_wrapper.rs  retain_release.rs  status_code.rs
open-cl-low-level/src/command_queue/: command_queue.rs  command_queue_options.rs  functions.rs  mod.rs
open-cl-low-level/src/command_queue/event/: event.rs  functions.rs  mod.rs  waitlist.rs
open-cl-low-level/src/context/: context.rs  context_builder.rs  functions.rs  mod.rs
open-cl-low-level/src/device/: device.rs  functions.rs  mod.rs
open-cl-low-level/src/kernel/: functions.rs  kernel.rs  kernel_arg.rs  kernel_operation.rs  mod.rs  work.rs
open-cl-low-level/src/mem/: buffer_builder.rs  functions.rs  mem.rs  mem_config.rs  mod.rs
open-cl-low-level/src/numbers/: arrays.rs  as_ptr.rs  as_slice.rs  boolean.rs  cast.rs  casting.rs  cl_newtype.rs  cl_number.rs  cl_primitives.rs  cl_vectors.rs  comparison.rs  conversion.rs  ffi_types.rs  float16.rs  half.rs  mod.rs  newtypes.rs  number.rs  number_type.rs  number_types.rs  scalar_traits.rs  scalars.rs  trait_impls.rs  traits.rs  vectors.rs  zeroed.rs
open-cl-low-level/src/numbers/newtypes/: half.rs  mod.rs  normal.rs  scalars.rs  traits.rs  vectors.rs
open-cl-low-level/src/numbers/newtypes/scalars/: boolean.rs  half.rs  mod.rs
open-cl-low-level/src/platform/: functions.rs  mod.rs  platform.rs
open-cl-low-level/src/program/: functions.rs  mod.rs  program.rs
open-cl-low-level/src/session/: kernel_operation.rs  mod.rs  session.rs  utils.rs
open-cl-runtime/: Cargo.toml
open-cl-runtime/src/: lib.rs
open-cl-sys/: Cargo.toml
opencl-core/: Cargo.toml
opencl-core/examples/simple_add/: main.rs  simple_add.ocl
opencl-core/src/: buffer.rs  command_queue.rs  context.rs  device.rs  error.rs  event.rs  kernel.rs  lib.rs  macros.rs  platform.rs  program.rs  session.rs  testing.rs  traits.rs
opencl-core/src/cl/: cl_object.rs  cl_pointer.rs  mod.rs
opencl-core/src/command_queue/: event.rs  flags.rs  helpers.rs  info.rs  low_level.rs  mod.rs  queue.rs
opencl-core/src/command_queue2/: info.rs  low_level.rs
opencl-core/src/context/: flags.rs  low_level.rs  mod.rs
opencl-core/src/device/: device_info.rs  device_ptr.rs  flags.rs  low_level.rs  mod.rs
opencl-core/src/device_mem/: flags.rs  low_level.rs  mod.rs
opencl-core/src/event/: event_info.rs  flags.rs  low_level.rs  mod.rs  tests.rs  wait_list.rs
opencl-core/src/kernel/: flags.rs  kernel_arg.rs  low_level.rs  mod.rs
opencl-core/src/platform/: flags.rs  low_level.rs  mod.rs
opencl-core/src/program/: flags.rs  low_level.rs  mod.rs
opencl-core/src/session/: mod.rs
opencl-core/src/tests/: mod.rs
opencl-core/src/utils/: dims.rs  mod.rs  status_code.rs  volume.rs  work.rs
opencl-core/src/utils/flags/: info.rs  map_flags.rs  mod.rs
opencl-low-level/: Cargo.toml  error.rs
opencl-low-level/examples/ll_simple_add/: main.rs
opencl-low-level/src/: cl_bitflags.rs  cl_enums.rs  cl_helpers.rs  cl_input.rs  cl_number.rs  cl_pointer.rs  command_queue.rs  context.rs  context_builder.rs  device.rs  dims.rs  error.rs  event.rs  kernel.rs  lib.rs  ll_testing.rs  macros.rs  mem.rs  output.rs  platform.rs  program.rs  session.rs  status_code.rs  strings.rs  utils.rs  vec_or_slice.rs  volume.rs  wait_list.rs  waitlist.rs  work.rs
opencl-runtime/: Cargo.toml
opencl-sys/: Cargo.toml  build.rs
opencl-sys/bindgen/: opencl_bindings.rs  run_bindgen.rs
opencl-sys/opencl_headers/: get_open_cl_headers.sh  wrapper.h
opencl-sys/opencl_headers/include/CL/: cl_version.h
opencl-sys/src/: lib.rs
opencl_bindings/: Cargo.toml
opencl_bindings/examples/simple_add/: main.rs
opencl_bindings/src/: command_queue.rs  context.rs  device.rs  device_mem.rs  error.rs  event.rs  kernel.rs  lib.rs  macros.rs  platform.rs  program.rs  utils.rs  work.rs
opencl_bindings/src/codes/: addressing_mode.rs  channel.rs  command.rs  filter_mode.rs  info.rs  mod.rs
opencl_bindings/src/codes/codes_enum/: helper_macros.rs  helpers2.rs  mod.rs
opencl_bindings/src/command_queue/: flags.rs  helpers.rs  low_level.rs  mod.rs
opencl_bindings/src/context/: flags.rs  mod.rs
opencl_bindings/src/device/: device_info.rs  flags.rs  low_level.rs  mod.rs
opencl_bindings/src/device_mem/: low_level.rs  mod.rs
opencl_bindings/src/event/: event_info.rs  low_level.rs  mod.rs
opencl_bindings/src/kernel/: flags.rs  kernel_arg.rs
opencl_bindings/src/open_cl/: buffer_op_config.rs  cl_object.rs  event_helpers.rs  events.rs  host_buffer.rs  mod.rs  status_code.rs  wait_list.rs
opencl_bindings/src/platform/: low_level.rs  mod.rs
opencl_bindings/src/program/: low_level.rs
opencl_bindings/src/tests/: mod.rs  thing.ex
opencl_bindings/src/utils/: mod.rs  status_code.rs  work.rs
opencl_bindings/src/utils/flags/: mod.rs
opencl_core/: Cargo.toml
opencl_sys/: Cargo.toml
src/: command_queue.rs  context.rs  device.rs  device_mem.rs  event.rs  kernel.rs  kernel_arg.rs.old  lib.rs  platform.rs  program.rs  work.rs
(+66 files in other folders)
