[package]
name = "open-cl-core"
version = "0.2.1"
authors = ["Jason Goldberger <jasongoldberger@gmail.com>"]
edition = "2018"
license = "MIT"
description = "OpenCL thread-safe, memory-safe Rust bindings"
keywords = ["opencl", "gpu", "computation"]
homepage = "https://github.com/elbow-jason/open_cl_rust/tree/master/opencl-core"
repository =  "https://github.com/elbow-jason/open_cl_rust/tree/master/opencl-core"

[lib]
name = "open_cl_core"

[dependencies]
open-cl-low-level = { version = "0.2.1", path = "../open-cl-low-level" }
paste = "0.1.6"
libc = "0.2.65"
# log = "0.4.8"
lazy_static = "1.4.0"
bitflags = "1.2.1"
failure = "0.1.6"
colored = "1.9"
num = "0.2"

log = "0.4"
env_logger = "0.7"
chrono = "0.4.10"

[features]
# v1.0.0 will not be supported. It's not thread-safe and I dont' want to even
# see the can opener for that can of worms.
opencl_version_1_2_0 = []

default = [
    "opencl_version_1_2_0",
]


# [[example]]
# name = "simple_add"
# path = "examples/simple_add/main.rs"


