[package]
name = "open-cl-low-level"
version = "0.2.1"
authors = ["Jason Goldberger <jasongoldberger@gmail.com>"]
edition = "2018"
license = "MIT"
description = "OpenCL low-level bindings"
keywords = ["opencl", "gpu", "computation"]
homepage = "https://github.com/elbow-jason/open_cl_rust/tree/master/open-cl-low-level"
repository =  "https://github.com/elbow-jason/open_cl_rust/tree/master/open-cl-low-level"

[lib]
name = "open_cl_low_level"

[dependencies]
cl-sys = "0.4.2"
ocl-core = "0.11.2"

# implementers of std::error::Error are errors in the anyhow::Result
# https://github.com/dtolnay/anyhow
anyhow = "1.0"

# lib for derive(Error) and helpful error message definition syntax.
# https://github.com/dtolnay/thiserror
thiserror = "1.0"


# easy-to-use interpolated macros
paste = "0.1.6"

# low-level types
libc = "0.2.65"

# create static values that require a slight amount of runtime evaluation
lazy_static = "1.4.0"

# macros for generating bitflag structs
bitflags = "1.2.1"

# a very-small framework for setting up hierarchies of errors
failure = "0.1.6"

# colored text
colored = "1.9"

# number stuff
num = "0.2.1"

# util for working with number types
num-traits = "0.2"

# logging
log = "0.4"

# logging runtime that is configurable via env vars
env_logger = "0.7"

# used for time formatting microsec in logs
chrono = "0.4.10"

# implements IEEE 754-2008 standard f16 for using OpenCL's cl_half in Rust
# https://stackoverflow.com/questions/50999616/how-to-idiomatically-alias-a-crate-in-rust-2018
# Yes, I upvoted the answer.
half_lib = { package = "half", version = "1.4.1" }

# because rust does not implement float comparison like this is 1985 or something...
float-cmp = "0.6.0"

[features]
# v1.0.0 will not be supported. It's not thread-safe and I dont' want to even
# see the can opener for that can of worms.
opencl_version_1_2_0 = []

default = [
    "opencl_version_1_2_0",
]

[[example]]
name = "ll_simple_add"
path = "examples/ll_simple_add/main.rs"

[[example]]
name = "applying_number_type"
path = "examples/applying_number_type/main.rs"

[[example]]
name = "casting_example"
path = "examples/casting_example/main.rs"
