[package]
name = "opencl-runtime"
version = "0.1.0"
authors = ["Jason Goldberger <jlgoldb2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "opencl_runtime"

[dependencies]
open-cl-low-level = { version = "0.1.0", path = "../open-cl-low-level" }
tokio = {version = "0.2.11", features = ["full"]}
once_cell = "1.3.1"
log = "0.4"
