[package]
name = "open-cl-runtime"
version = "0.1.0"
authors = ["Jason Goldberger <jlgoldb2@asu.edu>"]
edition = "2018"
license = "MIT"
description = "OpenCL async scheduler runtime"
keywords = ["opencl", "gpu", "computation" ]
homepage = "https://github.com/elbow-jason/open_cl_rust/tree/master/open-cl-runtime"
repository =  "https://github.com/elbow-jason/open_cl_rust/tree/master/open-cl-runtime"

[lib]
name = "open_cl_runtime"

[dependencies]
open-cl-low-level = "0.1.0"
tokio = {version = "0.2.11", features = ["full"]}
once_cell = "1.3.1"
log = "0.4"
