[package]
name = "opencl-core"
version = "0.1.0"
authors = ["Jason Goldberger <jasongoldberger@gmail.com>"]
edition = "2018"

[lib]
name = "opencl_core"

[dependencies]
opencl-sys = { version = "0.1.0", path = "../opencl-sys" }
paste = "0.1.6"
libc = "0.2.65"
# log = "0.4.8"
lazy_static = "1.4.0"
bitflags = "1.2.1"
failure = "0.1.6"
colored = "1.8.0"
num = "0.2"

[features]
# v1.0.0 will not be supported. It's not thread-safe and I dont' want to even
# see the can opener for that can of worms.
opencl_version_1_2_0 = []

default = [
    "opencl_version_1_2_0",
]


[[example]]
name = "simple_add"
path = "examples/simple_add/main.rs"


