[package]
name = "opencl-sys"
version = "0.1.0"
authors = ["Jason Goldberger <jasongoldberger@gmail.com>"]
edition = "2018"
links = "OpenCL"
build = "build.rs"
license = "MIT"
description = "OpenCL C-FFI bindings"
keywords = ["opencl", "gpu", "computation"]
homepage = "https://github.com/elbow-jason/open_cl_rust/tree/master/opencl-sys"
repository =  "https://github.com/elbow-jason/open_cl_rust/tree/master/opencl-sys"

[lib]
name = "opencl_sys"

[dependencies]
libc = "0.2.65"

[build-dependencies]
bindgen = "0.51.1"